--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,62 +1,64 @@
 <resources>
-    <string name="app_name">Умный очиститель</string>
-    <string name="admob_banner">ca-app-pub-3940256099942544/6300978111</string>
-    <string name="admob_inter">ca-app-pub-3940256099942544/1033173712</string>
-    <string name="admob_size">FULL_BANNER</string>
-    <string name="usedmemory">Использовано памяти</string>
-    <string name="usedram">Использовано RAM</string>
-    <string name="boost">Ускорить</string>
-    <string name="clean">Очистка</string>
-    <string name="scanCpu">Сканирование\nОЗУ ...</string>
-    <string name="scanMemory">Сканирование\nпамяти устройства ....</string>
-    <string name="found">Обнаружено:</string>
-    <string name="running_apps">"Запущенные приложения: "</string>
-    <string name="visible_cache">Видимый кеш</string>
-    <string name="cleanIt">Очистить</string>
-    <string name="files">Файлы данных</string>
-    <string name="apps">Данные приложений</string>
-    <string name="trash">Рекламный мусор</string>
-    <string name="cleanBottom">Освобождение\nданных приложений ...</string>
-    <string name="CleanDone">Освобождение\nвыполнено!</string>
-    <string name="boostRam">Сканирование\nОЗУ ...</string>
-    <string name="boost_found">Найдено:</string>
-    <string name="boosting">Ускорение</string>
-    <string name="running_apps_wsign">Запущенные приложения</string>
-    <string name="boostBottom">Освобождение\nоперативной памяти...</string>
-    <string name="gettingData">Получение данных ...</string>
-    <string name="cool">Охладить</string>
-    <string name="menu_cool">Охлаждение</string>
-    <string name="overheated">Перегрев</string>
-    <string name="battery_save">Экономия\nзаряда</string>
-    <string name="files_manager">Файловый\nменеджер</string>
-    <string name="apps_manager">Менеджер\nприложений</string>
-    <string name="batteryOptimize">Оптимизация\nэнергосбережения...</string>
-    <string name="appsCount">приложений</string>
-    <string name="normalMode">Обычный режим</string>
-    <string name="middleMode">Средняя экономия заряда</string>
-    <string name="maxMode">Максимальная экономия заряда</string>
-    <string name="countApps">Переводим в спящий режим ресурсоемкие приложения</string>
-    <string name="give_permission_top">Выдайте разрешение</string>
-    <string name="findApp">Найдите приложений</string>
-    <string name="give_permission">Для эффективной оптимизации нужно предоставить доступ к статистике использования приложений.</string>
-    <string name="allow">Разрешить</string>
-    <string name="filesManager">Файловый менеджер</string>
+    <string name="app_name">Smart Cleaner</string>
+    <string name="admob_banner" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="admob_inter" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
+    <string name="admob_size" translatable="false">FULL_BANNER</string>
+    <string name="usedmemory">Used RAM</string>
+    <string name="usedram">Used RAM</string>
+    <string name="boost">"Accelerate "</string>
+    <string name="clean">Cleaning</string>
+    <string name="scanCpu">RAM\nScan......</string>
+    <string name="scanMemory">Scanning\ndevice memory......</string>
+    <string name="found">Discovered:</string>
+    <string name="running_apps">Running applications:</string>
+    <string name="visible_cache">Visible cache</string>
+    <string name="cleanIt">Clean</string>
+    <string name="files">Data files</string>
+    <string name="apps">Application data</string>
+    <string name="trash">Advertising garbage</string>
+    <string name="cleanBottom">Releasing\napplication data...</string>
+    <string name="CleanDone">Liberation\naccomplished!</string>
+    <string name="boostRam">RAM\nScan...</string>
+    <string name="boost_found">Found:</string>
+    <string name="boosting">Acceleration</string>
+    <string name="running_apps_wsign">Running applications</string>
+    <string name="boostBottom">Freeing\nup RAM......</string>
+    <string name="gettingData">Obtaining data...</string>
+    <string name="cool">Cooling</string>
+    <string name="menu_cool">Cooling</string>
+    <string name="overheated">OVERHEAT</string>
+    <string name="battery_save">Saving\nCharge</string>
+    <string name="files_manager">File\nmanager</string>
+    <string name="apps_manager">Application\nManager</string>
+    <string name="batteryOptimize">Energy Conservation\nOptimization...</string>
+    <string name="appsCount">applications</string>
+    <string name="normalMode">Normal mode</string>
+    <string name="middleMode">Average charge economy</string>
+    <string name="maxMode">Maximum charge economy</string>
+    <string name="countApps">Putting applications to sleep</string>
+    <string name="give_permission_top">Issue a permit</string>
+    <string name="findApp">Find the application</string>
+    <string name="give_permission">\"In order to optimize effectively.  you need to provide access to  application usage statistics.\"</string>
+    <string name="allow">Allow</string>
+    <string name="filesManager">File manager</string>
     <string name="music">Музыка</string>
     <string name="musicText">Очистите песни, которые вам не нравятся, чтобы сэкономить  пространство на вашем устройстве</string>
     <string name="video">Видео</string>
     <string name="videoText">Очистите видео, которые вам не нравятся, чтобы сэкономить  пространство на вашем устройстве</string>
     <string name="image">Изображения</string>
     <string name="imageText">Очистите изображения, которые вам не нравятся, чтобы сэкономить  пространство на вашем устройстве</string>
-    <string name="appManager">Менеджер приложений</string>
+    <string name="appManager">Application Manager</string>
     <string name="delete">Удалить</string>
     <string name="share">Поделиться</string>
-    <string name="scan">Сканировать</string>
-    <string name="start">Начать</string>
-    <string name="accept">Примите</string>
-    <string name="policy">Политика конфиденциальности</string>
-    <string name="policy_bottom">Чтобы продолжить, примите условия</string>
-    <string name="scanning_system">Сканирование системы</string>
+    <string name="scan">Scan</string>
+    <string name="start">Start</string>
+    <string name="accept">Accept the</string>
+    <string name="policy">Privacy Policy</string>
+    <string name="policy_bottom">To continue, accept the conditions</string>
+    <string name="scanning_system">System scan</string>
     <string name="give_storage_permission">Для эффективного нахождения и удаления ненужных файлов, нужно предоставить доступ к управлению всеми файлами телефона.</string>
+    <string name="recommend">We also recommend:</string>
+    <string name="optimize">Optimize</string>
     <string-array name="generic_filter_files">
         <item>.tmp</item>
         <item>.log</item>
